--- a/css/styleblog/footer.css
+++ b/css/styleblog/footer.css
@@ -5,21 +5,21 @@
 
 .footer__container{
 
-    max-width: 98.6rem;
+    width: 100%;
     padding: 0 3.2rem;
-    margin: 0 auto;
+
     position: absolute;
     bottom: 0;
     display: flex;
+
     justify-content: center;
-    text-align: center;
-    left: 28%;
+   
 }
 .footer__container p{
     font-size: 1.4rem;
     font-weight: 400;
     padding-bottom: 2rem;
-    color: #585050;
+    color: var(--text-body-color);
 }
 .footer__container a{
     color: #205EB0;
